--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>HTML Clean Up Lab</title>
   <meta charset="utf-8">
@@ -55,20 +56,10 @@
      </ol>
   </aside>
   </main>
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
- <footer id = "footer" >Footer Content is here</footer>
- <hr/>
- </div>
+  <footer id="footer">
+    <p>Footer Content is here</p>
+  </footer>
+  </div>
 </body>
 
 </html>
